# spk

./: .gitignore  pyproject.toml
spk/: teste_spark.ipynb
