[tool.poetry]
name = "spk"
version = "0.1.0"
description = ""
authors = ["Levy Nunes <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
delta-spark = "3.0.0"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
